# egocentric_golf_app

./: .env  .gitignore  AGENTS.md  README.md  golf-pipeline-master.md
golf-pipeline/: .gitignore  PROJECT_SPEC.md  README.md
golf-pipeline/backend/: .env.example  pyproject.toml
golf-pipeline/backend/scripts/: backfill_swing_metrics.py  diagnose_swing_metrics.py  process_real_swing.py  run_local.py  synth_impacts.py  test_local_pipeline.py  upload_external.py  verify_setup.py
golf-pipeline/backend/src/golf_pipeline/: __init__.py  config.py  schemas.py
golf-pipeline/backend/src/golf_pipeline/api/: server.py
golf-pipeline/backend/src/golf_pipeline/db/: client.py
golf-pipeline/backend/src/golf_pipeline/metrics/: compute.py
golf-pipeline/backend/src/golf_pipeline/modal_pose/: inference.py
golf-pipeline/backend/src/golf_pipeline/segmentation/: audio_impact.py
golf-pipeline/backend/src/golf_pipeline/storage/: s3.py
golf-pipeline/backend/src/golf_pipeline/temporal/: activities.py  worker.py  workflows.py
golf-pipeline/backend/tests/: test_activities.py  test_audio_segmenter.py  test_backfill_swing_metrics.py  test_keypoints_endpoint.py  test_metrics.py  test_metrics_phases.py  test_motion_gate.py  test_process_real_swing.py  test_upload_external.py
golf-pipeline/backend/tests/fixtures/: swing_003_lead_wrist_speed.npy
golf-pipeline/docs/: atlas-vector-index.md  capture-surface.md  diagnose_swing_20260504_205932_2a478c_swing_000.md  diagnose_swing_20260504_210023_82be92_swing_003.md  diagnose_swing_20260504_210126_25a647_swing_003.md  first-run.md
(+35 files in other folders)
